XMLtoCSV/objects/unpackaged/objects/Clm_Presentation_Slide_vod__c.object
<CustomObject>
    <description>Closed Loop Marketing presentation slides.</description>
    <fields>
        <fullName>Clm_Presentation_vod__c</fullName>
        <description>Master-detail relationship to CLM presentations.</description>
        <label>Presentation</label>
        <referenceTo>Clm_Presentation_vod__c</referenceTo>
        <relationshipLabel>Presentation Slides (CLM Presentation)</relationshipLabel>
        <relationshipName>Clm_Presentation_Slide_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Display_Order_vod__c</fullName>
        <description>Defines slide order within a presentation.</description>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External Id field for Data Loading</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key_Message_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Key Message instance.</description>
        <label>Key Message</label>
        <referenceTo>Key_Message_vod__c</referenceTo>
        <relationshipName>Clm_Presentation_Slide_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mandatory_Slides_vod__c</fullName>
        <label>Mandatory Slides</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sub_Presentation_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup  to a CLM_Presentation, which is an embedded call flow, or sub presentation.</description>
        <label>Sub Presentation</label>
        <referenceTo>Clm_Presentation_vod__c</referenceTo>
        <relationshipName>Clm_Presentation_Slide_2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM.</description>
        <externalId>true</externalId>
        <label>Veeva External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Presentation Slide</label>
    <nameField>
        <displayFormat>CPS-{000000000}</displayFormat>
        <label>Presentation Slide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presentation Slides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NO_REFER_TO_MAIN_PRESENTATION</fullName>
        <active>true</active>
        <description>The sub-presentation of one slide should not be linked back to the main presentation.</description>
        <errorConditionFormula>Clm_Presentation_vod__r.Id = Sub_Presentation_vod__c</errorConditionFormula>
        <errorDisplayField>Sub_Presentation_vod__c</errorDisplayField>
        <errorMessage>You cannot make the parent presentation refer to itself as a sub presentation</errorMessage>
    </validationRules>
</CustomObject>